WIP Running all tests

--- a/src/test/java/org/apache/commons/collections4/BUILD
+++ b/src/test/java/org/apache/commons/collections4/BUILD
@@ -1,9 +1,14 @@
+load("//src/test:junit.bzl", "junit_tests")
+
 java_library(
-    name = "collections4",
-    srcs = glob(["**/*.java"]),
+    name = "support",
+    srcs = glob(
+        ["**/*.java"],
+        exclude = ["**/*Test.java"],
+    ),
     javacopts = ["-XepDisableAllChecks"],
     deps = [
-        "//:collections4",
+        "//src/main/java/org/apache/commons/collections4",
         "//third_party:junit_junit",
         "//third_party:org_apache_commons_commons_lang3",
         "//third_party:org_easymock_easymock",
@@ -12,13 +17,18 @@ java_library(
     ],
 )
 
-java_test(
-    name = "ArrayStackTest",
+junit_tests(
+    name = "tests",
+    srcs = glob(["**/*Test.java"]),
     data = ["//src/test/resources"],
-    test_class = "org.apache.commons.collections4.ArrayStackTest",
-    runtime_deps = [
-        ":collections4",
-        "//:collections4",
+    javacopts = ["-XepDisableAllChecks"],
+    deps = [
+        ":support",
+        "//src/main/java/org/apache/commons/collections4",
         "//third_party:junit_junit",
+        "//third_party:org_apache_commons_commons_lang3",
+        "//third_party:org_easymock_easymock",
+        "//third_party:org_hamcrest_hamcrest_core",
+        "//third_party:org_objenesis_objenesis",
     ],
 )
