--- a/src/main/java/org/apache/commons/collections4/BUILD
+++ b/src/main/java/org/apache/commons/collections4/BUILD
@@ -1,7 +1,6 @@
 java_library(
     name = "collections4",
-    srcs = glob(["src/main/java/**/*.java"]),
-    resources = glob(["src/main/resources/**"]),
+    srcs = glob(["**/*.java"]),
     visibility = ["//visibility:public"],
     deps = [
         "//third_party:org_apache_commons_commons_lang3",
